# turbo-pix

./: .dockerignore  .gitignore  .nighthawk-baseline.yml  .nighthawk.yml  .prettierignore  .releaserc.json  .stylelintrc.json  AGENTS.md  CHANGELOG.md  Cargo.toml  Containerfile  FRONTEND_IMPROVEMENTS.md  HEVC_FIX_SUMMARY.md  HEVC_SUPPORT.md  IMAGE_OPTIMIZATION_ANALYSIS.md  PROJECT_PLAN.md  README.md  debug_hevc.sh  docker-compose.yml  e2e-puppeteer-test.js  eslint.config.js  nighthawk-report.md  nohup.out  package-lock.json  package.json  playwright.config.js  run-act.sh  smoke-test.js  test_hevc_fix.sh
.github/workflows/: ci.yml
.sisyphus/evidence/: task-3-agents-md-updated.txt
.sisyphus/notepads/indexing-progress-viz/: learnings.md
.sisyphus/notepads/mobile-swipe-gestures/: learnings.md
container-data/: Containerfile
migrations/: 20250101000001_create_photos_table.sql  20250101000002_create_vector_tables.sql  20250101000003_create_video_metadata_table.sql  20250101000004_create_collages_table.sql  20250101000005_create_indexes.sql  20250101000006_create_housekeeping_candidates_table.sql  20250101000007_add_geo_location_resolved.sql
models/clip/: .gitignore  README.md
scripts/: download_clip_models.sh
src/: cache.rs  cache_manager.rs  cleanup_manager.rs  clip_encoder.rs  collage_generator.rs  config.rs  db.rs  db_pool.rs  db_schema.rs  db_types.rs  file_scanner.rs  geo_location.rs  handlers_cleanup.rs  handlers_collage.rs  handlers_config.rs  handlers_health.rs  handlers_housekeeping.rs  handlers_indexing.rs  handlers_photo.rs  handlers_search.rs  handlers_static.rs  handlers_thumbnail.rs  handlers_video.rs  housekeeping_manager.rs  image_editor.rs  indexer.rs  lib.rs  main.rs  metadata_extractor.rs  metadata_writer.rs  mimetype_detector.rs  photo_processor.rs  raw_processor.rs  scheduler.rs  semantic_search.rs  thumbnail_generator.rs  thumbnail_types.rs  video_processor.rs  warp_handlers.rs  warp_helpers.rs  (+3 more)
src/cache/: memory.rs  mod.rs  thumbnails.rs
src/db/: connection.rs  crud.rs  migrations.rs  mod.rs  models.rs  schema.rs
src/indexer/: metadata.rs  mod.rs  processor.rs  scanner.rs
src/scheduler/: mod.rs  tasks.rs
src/web/: middleware.rs  mod.rs  routes.rs  static_handler.rs
src/web/handlers/: mod.rs  photos.rs  search.rs  thumbnails.rs
static/: index.html  site.webmanifest
static/css/: components.css  main.css  responsive.css
static/i18n/: i18nManager.js
static/i18n/de/: index.js
static/i18n/en/: index.js
static/js/: api.js  app.js  blurhash.js  cleanup.js  collages.js  constants.js  feather.min.js  gestureManager.js  gestureRecognizers.js  housekeeping.js  i18n.js  icons.js  indexingOrbit.js  indexingStatus.js  infiniteScroll.js  logger.js  photoCard.js  photoGrid.js  router.js  search.js  timeline.js  utils.js  viewer.js  viewerControls.js  viewerMetadata.js  viewerMetadataEdit.js
test-results/: .last-run.json
test-results/tests-cleanup.e2e-Cleanup--9829d-ates-and-allow-keeping-them/: error-context.md
tests/: api_tests.rs  cache_tests.rs  cleanup.e2e.spec.js  housekeeping.e2e.spec.js  i18n.test.js  moov_integration_test.rs  setup.js  static_handler_tests.rs
tests/e2e/setup/: global-setup.js  global-teardown.js  test-data-manager.js  test-helpers.js
tests/e2e/specs/: collages.e2e.spec.js  critical-paths.e2e.spec.js  favorites.e2e.spec.js  housekeeping.e2e.spec.js  indexing-empty-state.e2e.spec.js  indexing-orbit.e2e.spec.js  keyboard.e2e.spec.js  layout-glassmorphism.e2e.spec.js  loading.e2e.spec.js  location-search.e2e.spec.js  metadata.e2e.spec.js  mobile.e2e.spec.js  moov.e2e.spec.js  navigation.e2e.spec.js  search.e2e.spec.js  timeline.e2e.spec.js  transcoding.e2e.spec.js  url-routing.e2e.spec.js  video-indicator.e2e.spec.js  videos.e2e.spec.js  viewer-glassmorphism.e2e.spec.js  viewer-mobile-sidebar.e2e.spec.js  viewer-swipe.e2e.spec.js  viewer.e2e.spec.js
