[package]
name = "turbo-pix"
version = "0.1.0"
edition = "2021"

[dependencies]
# Memory allocator
mimalloc = "0.1.48"

# Web framework
warp = { version = "0.4.2", features = ["server", "multipart"] }

# Database
rusqlite = { version = "0.37", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.31"

# Scheduling
clokwerk = "0.4"

# Image processing & MIME
image = { version = "0.25", default-features = false, features = ["rayon", "bmp", "gif", "hdr", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp"] }
kamadak-exif = "0.6"
fast-blurhash = "1.0"
rawloader = "0.37"
bayer = "0.1"

# ML model for semantic search
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
hf-hub = { version = "0.4.3", default-features = false, features = ["tokio", "ureq", "rustls-tls"] }
tokenizers = "0.22.1"
sqlite-vec = "0.1.7-alpha.2"
zerocopy = "0.8"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
rayon = "1.8"

# Async runtime
tokio = { version = "1.0", features = ["fs", "macros", "rt", "rt-multi-thread", "signal"] }

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.0"

[profile.production]
inherits = "release"
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
strip = true # Strip debug symbols